<resources>
    <string name="app_name">Proyect Aplication</string>
    <string name="page_title">App Name</string>
    <string name="mis_grupos">My Groups</string>
    <string name="horario">Schedule</string>
    <string name="mis_quedadas">My Meetings</string>
    <string name="nuevo_grupo_quedada">New group/Meeting</string>
    <string name="crear_quedada">Create Meeting</string>
    <string name="descripci_n_de_la_quedada">Meeting Description</string>
    <string name="salida_de_domingo">Sunday Meeting</string>
    <string name="a_adir_quedada">Add Meeting</string>
    <string name="seleccionar_grupo">Select group</string>
    <string name="nombre_de_la_quedada">Meeting name</string>
    <string name="mi_quedada">My meeting</string>
    <string name="grupo">Group</string>
    <string name="quedada">Meeting</string>
    <string name="qu_quieres_crear">¿What do you want to create?</string>
    <string name="crear_grupo">Create group</string>
    <string name="imagen_de_grupo">Group Image</string>
    <string name="bot_n_para_crear_grupo">Create group button</string>
    <string name="nombre_del_grupo">Group Name</string>
    <string name="mi_grupo">My group</string>
    <string name="descripci_n_del_grupo">Group description</string>
    <string name="los_mejores_amigos">Group description</string>
    <string name="a_adir_grupo">Add group</string>
    <string name="imagen_del_grupo">Group image</string>
    <string name="infobtn">info</string>
    <string name="editbtn">Edit</string>
    <string name="acercade_texto">This application has been developed by Asier Conesa Torres, student of 2 DAM in IES MAESTRE DE CALATRAVA highschool in Ciudad Real, This application has been developed with educational propouses, and its distribution is not allowed without the author\'s permission</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="sync_header">Settings</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sync_title">Dark theme</string>
    <string name="lbldate01">Last release date:</string>
    <string name="eliminar_contacto">Delete contact</string>
    <string name="contactos">Contacts</string>
    <string name="modificar_contacto">Edit contact</string>
    <string name="insertar_contacto">Insert contact</string>
    <string name="ver_contactos">Show contacts</string>
    <string name="editar_quedada">Edit Meeting</string>
    <string name="edit_group">Edit group</string>
</resources>