<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_backgroundelemento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoElemento">


    <Button
        android:id="@+id/btnNewGroup"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="242dp"
        android:onClick="crearNuevoGrupo"
        android:text="@string/grupo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNewMeet"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="52dp"
        android:onClick="crearNuevaQuedada"
        android:text="@string/quedada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewElemento" />

    <TextView
        android:id="@+id/textViewElemento"
        android:layout_width="376dp"
        android:layout_height="118dp"
        android:layout_marginBottom="35dp"
        android:text="@string/qu_quieres_crear"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>